--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/nickrigby/silk-nav"
+  },
+  "devDependencies": {
+    "typescript": "^2.2.2"
   }
 }
