Add silk core as dev dependency

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "url": "https://github.com/nickrigby/silk-nav"
   },
   "devDependencies": {
+    "silk-core": "nickrigby/silk-core",
     "typescript": "^2.2.2"
   }
 }
