--- a/package.json
+++ b/package.json
@@ -10,14 +10,26 @@
   },
   "license": "ISC",
   "scripts": {
-    "build": "tsc --outDir ./dist ./src/js/*.ts"
+    "build": "tsc --outDir ./dist ./src/js/*.ts",
+    "serve": "webpack-dev-server --open"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/nickrigby/silc-nav"
   },
   "devDependencies": {
+    "css-loader": "^0.28.2",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.11.1",
+    "node-sass": "^4.5.3",
+    "sass-loader": "^6.0.5",
     "silc-core": "nickrigby/silc-core",
-    "typescript": "^2.2.2"
+    "style-loader": "^0.18.1",
+    "ts-loader": "^2.1.0",
+    "typescript": "^2.2.2",
+    "url-loader": "^0.5.8",
+    "webpack": "^2.6.0",
+    "webpack-dev-server": "^2.4.5",
+    "webpack-shell-plugin": "^0.5.0"
   }
 }
