--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "license": "ISC",
   "scripts": {
-    "build": "tsc --outDir ./dist ./src/js/*.ts",
+    "build": "tsc --outDir ./dist ./src/js/index.ts",
     "serve": "webpack-dev-server --open"
   },
   "repository": {
