--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "file-loader": "^0.11.1",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.5",
-    "silc-core": "nickrigby/silc-core",
+    "silc-core": "^0.2.0",
     "style-loader": "^0.18.1",
     "ts-loader": "^2.1.0",
     "typescript": "^2.2.2",
