--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "scripts": {
     "build": "tsc --outDir ./dist ./src/js/index.ts",
-    "serve": "webpack-dev-server --open"
+    "serve": "webpack-dev-server --open",
+    "test": "webpack && mocha"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,8 @@
     "css-loader": "^0.28.2",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
+    "mocha": "^3.4.2",
+    "node-http-server": "^6.2.1",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.5",
     "silc-core": "^0.3.1",
@@ -30,6 +33,6 @@
     "url-loader": "^0.5.8",
     "webpack": "^2.6.0",
     "webpack-dev-server": "^2.4.5",
-    "webpack-shell-plugin": "^0.5.0"
+    "zombie": "^5.0.5"
   }
 }
